--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,8 @@
     <!-- Fonts -->
 
     <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
 
     <!-- Title -->
     <title>Portfólio - Douglas</title>
@@ -29,20 +31,108 @@
                 <div class="line3"></div>
             </div>
             <ul class="list">
-                <li><a href="">Início</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Projetos</a></li>
-                <li><a href="">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Contatos</a></li>
             </ul>
         </nav>
     </header>
 
+    <section class="hero">
+
+        <div class="conteudo_hero">
+
+            <div class="text_hero">
+
+                <span>Bem-vindo ao meu Mundo</span>
+                <h1>Me chamo <span>Douglas Nascimento</span></h1>
+                <h2>Analista e Desenvolvedor</h2>
+                <h2>Engenheiro de Software</h2>
+                <h2>Front-End</h2>
+                <p>Combinando criatividade e lógica para criar experiências digitais inovadoras e impactantes. Minha missão é transformar ideias em soluções tecnológicas que atendam às necessidades do usuário e superem expectativas. Vamos juntos construir o futuro da web?</p>
+
+
+                <div class="button_hero">
+                    <a href="#">Meu CV</a>
+                </div>
+
+            </div>
+
+            
+
+            <div class="icons_hero">
+
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+
+            </div>
+
+            <!-- Imagem à direita -->
+            <div class="img_hero">
+                <img src="sua-imagem.jpg" alt="Imagem Hero">
+            </div>
+
+        </div>
+
+    </section>
+
     <main>
 
+        <section class="timeline">
+            <h2>Minhas Habilidades</h2>
+            <div class="timeline-items">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Habilidade 1: Front-End</h3>
+                        <p>Tenho experiência com HTML, CSS, JavaScript, e frameworks como React, que me permitem criar interfaces dinâmicas e responsivas.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Habilidade 2: React</h3>
+                        <p>Utilizo o React para construir interfaces de usuário interativas, com foco em componentes reutilizáveis e gestão de estado.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Habilidade 3: Git e Versionamento</h3>
+                        <p>Uso o Git para controle de versão, facilitando a colaboração e organização de código em projetos de equipe.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Habilidade 4: Animações com GSAP</h3>
+                        <p>Implemento animações avançadas com GSAP para melhorar a interação do usuário e a experiência visual em sites e aplicativos.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="projetos">
+
+
+
+        </section>
+
+        <section class="servicos">
+
+
+
+        </section>
+
     </main>
+
+    <footer>
+
+
+
+    </footer>
     
     <script src="/js/mobile-navbar.js"></script>
+    <script src="/js/gsap.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
