--- a/pages/index.html
+++ b/pages/index.html
@@ -87,25 +87,33 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Habilidade 1: Front-End</h3>
-                        <p>Tenho experiência com HTML, CSS, JavaScript, e frameworks como React, que me permitem criar interfaces dinâmicas e responsivas.</p>
+                        <p>Tenho sólida experiência em desenvolvimento front-end, utilizando HTML, CSS e JavaScript. Com esses conhecimentos, sou capaz de construir interfaces de usuário intuitivas e responsivas, garantindo uma boa experiência em dispositivos móveis e desktops.</p>
+                        <p>Além disso, tenho expertise na criação de layouts modernos com Flexbox e Grid, o que me permite controlar com precisão a estrutura das páginas. Também trabalho com pré-processadores CSS como Sass e LESS para facilitar a manutenção do código e melhorar a produtividade.</p>
+                        <p>Sou fluente em boas práticas de semântica e acessibilidade web, criando interfaces que sejam inclusivas para todos os usuários, independentemente de suas necessidades.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Habilidade 2: React</h3>
-                        <p>Utilizo o React para construir interfaces de usuário interativas, com foco em componentes reutilizáveis e gestão de estado.</p>
+                        <p>Com React, sou capaz de criar aplicações web altamente interativas e eficientes, utilizando seu poderoso sistema de componentes. Tenho experiência em gerenciar o estado da aplicação com Context API e Redux, garantindo que a interface reaja dinamicamente às interações do usuário.</p>
+                        <p>Além disso, possuo experiência em React Router para navegação em páginas dinâmicas e React Hooks, que permitem um controle mais eficaz sobre o ciclo de vida dos componentes e estados internos.</p>
+                        <p>Também implemento técnicas de otimização de performance, como a utilização de React.memo, lazy loading e code splitting, para melhorar a experiência do usuário, garantindo que a aplicação seja rápida e eficiente.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Habilidade 3: Git e Versionamento</h3>
-                        <p>Uso o Git para controle de versão, facilitando a colaboração e organização de código em projetos de equipe.</p>
+                        <p>Tenho grande familiaridade com o uso de Git para controle de versão e colaboração em projetos, utilizando comandos como commit, push, pull, branch, merge e rebase de forma eficiente. Isso me permite gerenciar o código de maneira organizada, além de facilitar o trabalho em equipe.</p>
+                        <p>Com o Git, sou capaz de realizar versões paralelas do código com o uso de branches, facilitando a implementação de novas funcionalidades sem impactar o código principal. Também utilizo o GitHub e GitLab para hospedar meus projetos e colaborar com outros desenvolvedores.</p>
+                        <p>O controle de versões me permite resolver conflitos de código com facilidade, e realizar testes e ajustes de forma segura sem comprometer a estabilidade do sistema. Além disso, implemento fluxos de trabalho baseados em Pull Requests para revisar e discutir mudanças de código em equipe.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Habilidade 4: Animações com GSAP</h3>
-                        <p>Implemento animações avançadas com GSAP para melhorar a interação do usuário e a experiência visual em sites e aplicativos.</p>
+                        <p>Uso o GSAP (GreenSock Animation Platform) para criar animações sofisticadas e de alto desempenho em sites e aplicativos. Com GSAP, sou capaz de animar qualquer elemento da página, desde mudanças de propriedades CSS até transformações complexas, tudo isso de maneira suave e sem sobrecarregar a performance.</p>
+                        <p>Minha experiência com GSAP inclui animações em sequência, timelines, efeitos de scroll, e animações baseadas em interação do usuário. Isso permite criar transições fluidas entre páginas, animações de carregamento e interações dinâmicas que mantêm o usuário engajado.</p>
+                        <p>Além disso, implemento animações responsivas que garantem que o site mantenha a fluidez e a interação visual em diferentes tamanhos de tela e dispositivos, sem sacrificar a performance ou a experiência do usuário.</p>
                     </div>
                 </div>
             </div>
