--- a/hero.html
+++ b/hero.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Douglas</title>
+    <link rel="stylesheet" href="/css/style.css.map">
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -24,11 +26,11 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="hero.html">Home</a></li>
+                    <li><a href="/pages/about.html">About me</a></li>
+                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/pages/services.html">Services</a></li>
+                    <li><a href="/pages/contact.html">Contact us</a></li>
                 </ul>
             </div>
         </nav>
