--- a/hero.html
+++ b/hero.html
@@ -27,8 +27,8 @@
             <div class="menu">
                 <ul>
                     <li><a href="hero.html">Home</a></li>
-                    <li><a href="/pages/about.html">About me</a></li>
-                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/pages/about.html" target="_blank">About me</a></li>
+                    <li><a href="/pages/projects.html" target="_blank">Projects</a></li>
                     <li><a href="/pages/services.html">Services</a></li>
                     <li><a href="/pages/contact.html">Contact us</a></li>
                 </ul>
